# simple-speech

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  logcat_simple_speech.txt  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_speech.cpp
app/src/main/java/com/tencent/simplespeech/: MainActivity.java  NativeSpeechEngine.java
app/src/main/res/values/: colors.xml  styles.xml
scripts/: build_android.bat  install_debug.bat  push_models.bat
