cmake_minimum_required(VERSION 3.22)
project(simple_speech LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

foreach(lang C CXX)
    set(CMAKE_${lang}_FLAGS_DEBUG "${CMAKE_${lang}_FLAGS_DEBUG} -O3 -DNDEBUG -fno-finite-math-only -fomit-frame-pointer")
    set(CMAKE_${lang}_FLAGS_RELEASE "${CMAKE_${lang}_FLAGS_RELEASE} -O3 -DNDEBUG -fno-finite-math-only -fomit-frame-pointer")
endforeach()

add_library(simple_speech SHARED native_speech.cpp)

target_link_libraries(simple_speech android log)

set(LLAMA_CPP_DIR "" CACHE PATH "Path to patched llama.cpp source with Hy-MT STQ1_0 support")
set(OPENCL_SDK_ROOT "" CACHE PATH "Path to Adreno OpenCL SDK root")
option(SIMPLE_SPEECH_WITH_LLAMA "Compile with llama.cpp backend" OFF)
option(SIMPLE_SPEECH_WITH_OPENCL "Enable OpenCL runtime hooks" OFF)

if(SIMPLE_SPEECH_WITH_LLAMA)
    if(NOT LLAMA_CPP_DIR)
        message(FATAL_ERROR "SIMPLE_SPEECH_WITH_LLAMA=ON requires -DLLAMA_CPP_DIR=/path/to/llama.cpp")
    endif()

    if(SIMPLE_SPEECH_WITH_OPENCL)
        set(BUILD_SHARED_LIBS ON CACHE BOOL "" FORCE)
        set(GGML_BACKEND_DL ON CACHE BOOL "" FORCE)
    else()
        set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
        set(GGML_BACKEND_DL OFF CACHE BOOL "" FORCE)
    endif()
    set(LLAMA_BUILD_COMMON OFF CACHE BOOL "" FORCE)
    set(LLAMA_BUILD_TESTS OFF CACHE BOOL "" FORCE)
    set(LLAMA_BUILD_TOOLS OFF CACHE BOOL "" FORCE)
    set(LLAMA_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
    set(LLAMA_BUILD_SERVER OFF CACHE BOOL "" FORCE)
    set(LLAMA_BUILD_APP OFF CACHE BOOL "" FORCE)
    set(LLAMA_OPENSSL OFF CACHE BOOL "" FORCE)
    if(SIMPLE_SPEECH_WITH_OPENCL)
        if(OPENCL_SDK_ROOT)
            set(OpenCL_LIBRARY "${OPENCL_SDK_ROOT}/libs/Android/libOpenCL.so" CACHE FILEPATH "" FORCE)
            set(OpenCL_INCLUDE_DIR "${OPENCL_SDK_ROOT}/inc" CACHE PATH "" FORCE)
        endif()
        set(GGML_OPENCL ON CACHE BOOL "" FORCE)
        set(GGML_OPENCL_USE_ADRENO_KERNELS ON CACHE BOOL "" FORCE)
        set(GGML_OPENCL_EMBED_KERNELS ON CACHE BOOL "" FORCE)
        set(GGML_OPENCL_TARGET_VERSION "300" CACHE STRING "" FORCE)
    else()
        set(GGML_OPENCL OFF CACHE BOOL "" FORCE)
    endif()

    add_subdirectory("${LLAMA_CPP_DIR}" llama_cpp_build EXCLUDE_FROM_ALL)
    target_compile_definitions(simple_speech PRIVATE SIMPLE_SPEECH_WITH_LLAMA=1)
    target_include_directories(simple_speech PRIVATE
            "${LLAMA_CPP_DIR}/include"
            "${LLAMA_CPP_DIR}/ggml/include")
    target_link_libraries(simple_speech llama)
endif()

if(SIMPLE_SPEECH_WITH_OPENCL AND OPENCL_SDK_ROOT)
    target_compile_definitions(simple_speech PRIVATE SIMPLE_SPEECH_WITH_OPENCL=1)
    target_include_directories(simple_speech PRIVATE "${OPENCL_SDK_ROOT}/inc")
endif()
